--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,17 @@
 
     <application
         android:allowBackup="true"
-        android:networkSecurityConfig="@xml/network_exceptions"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_exceptions"
         android:supportsRtl="true"
         android:theme="@style/Theme.World"
         tools:targetApi="31">
+        <activity
+            android:name=".infoActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
